# Changelog

## additions

## changes
- have to use alt + right click for dark step
- default darkstep cooldown 4 -> 6
- default cooldown umbral cloak 16 -> 20

## fixed

## misc
