@@ -1,0 +1,9 @@
+package com.yuanno.soulsawakening.client.renderers;
+
+public interface IDynamicRenderer {
+
+    String getMobTexture();
+
+    String getDefaultTexture();
+
+}
